# mcphawk

./: .gitignore  LICENSE  Makefile  README.md  codecov.yml  dummy_mcp_server.py  manifest.in  pyproject.toml  requirements-dev.txt  requirements.txt  test_mcp_patterns.py  test_wrapper_debug.sh
.github/workflows/: ci.yml  release.yml
examples/: http_sse_example.py  mcp_sdk_client.py  stdio_client.py  streamable_http_example.py  test_mcp_http.sh  test_mcp_sdk.sh  test_mcp_sdk_client.py  test_mcp_sdk_sse.sh  test_mcp_sdk_wait.sh  test_mcp_simple.sh
examples/generate_traffic/: README.md  generate_all.py  tcp_client.py  tcp_server.py  test_capture.py  ws_client.py  ws_server.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App-original.vue  App-sidebar.vue  App.vue  main.js
frontend/src/assets/: main.css
frontend/src/components/Analytics/: ErrorRateChart.vue  MessageTypeChart.vue  MethodFrequency.vue  PerformanceMetrics.vue  RequestResponseChart.vue  TimeRangeSelector.vue  TransportDistribution.vue
frontend/src/components/LogTable/: LogFilters.vue  LogFiltersModern.vue  LogFiltersSidebar.vue  LogRow.vue  LogSearchBar.vue  LogTable.vue  MessageTypeBadge.vue
frontend/src/components/MessageDetail/: MessageDetailModal.vue
frontend/src/components/Stats/: StatsPanel.vue
frontend/src/components/common/: ConnectionStatus.vue  PairedMessages.vue  ThemeToggle.vue
frontend/src/router/: index.js
frontend/src/stores/: analytics.js  logs.js  websocket.js
frontend/src/utils/: messageParser.js  transportFormatter.js
frontend/src/views/: AnalyticsView.vue  LogView.vue
mcp_shark/: cli.py  logger.py  models.py  sniffer.py  ws_reassembly.py
mcp_shark/web/: broadcaster.py  server.py
mcp_shark/web/static/: index.html
mcphawk/: cli.py  logger.py  models.py  sniffer.py  stdio_capture.py  stdio_server_detector_fallback.py  tcp_reassembly.py  transport_detector.py  utils.py  wrapper.py  ws_reassembly.py
mcphawk/mcp_server/: __init__.py  server.py
mcphawk/web/: broadcaster.py  metrics.py  server.py
mcphawk/web/static/: index.html
mcphawk/web/static/assets/: index-1WFXDl6d.css  index-BS1OjcCo.js  index-BVU425J6.js  index-BWNfwyx6.css  index-CfQwKiJa.js  index-DC4K23Wn.js  index-Do4cWYV7.css  index-oZxo1TPn.css  ui-BJy8By8l.js  (+7 more)
tests/: test_broadcast_ui.py  test_broadcaster.py  test_cli.py  test_ipv4_ipv6_capture.py  test_logger.py  test_mcp_http_simple.py  test_mcp_server.py  test_mcp_stdio_integration.py  test_server.py  test_sniffer.py  test_sniffer_traffic_type.py  test_traffic_type.py  test_transport_detector.py  test_utils.py  test_web.py  test_web_server.py  test_websocket_integration.py  test_websocket_simple.py  test_wrapper.py  test_ws_reassembly.py  test_ws_tcp_classification.py
tests/integration/cli/: test_cli.py
tests/integration/db/: test_logger.py  test_traffic_type.py
tests/integration/mcp/: test_mcp_stdio_integration.py
tests/integration/network/: test_sniffer.py  test_sniffer_traffic_type.py
tests/integration/web/: test_analytics_aggregation.py  test_analytics_api.py  test_web_server.py
tests/unit/: test_metrics.py  test_stdio_server_detector_fallback.py  test_tcp_reassembly.py
