[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcphawk"
version = "0.4.3"
description = "MCPHawk is a Logging & Monitoring solution for MCP traffic, providing deep visibility into MCP client-server interactions"
authors = [
  { name = "tech4242" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "scapy>=2.5.0",
  "psutil>=6.0.0",
  "typer>=0.12.0",
  "fastapi>=0.116.1",
  "uvicorn[standard]>=0.35.0",
  "mcp>=1.0.0",
  "websockets>=12.0"
]

[project.urls]
"Homepage" = "https://github.com/tech4242/mcphawk"
"Bug Tracker" = "https://github.com/tech4242/mcphawk/issues"

[project.scripts]
mcphawk = "mcphawk.cli:app"

[tool.setuptools]
packages = {find = {where = ["."], include = ["mcphawk*"]}}
include-package-data = true

[tool.setuptools.package-data]
"mcphawk.web" = ["static/**/*", "static/*", "static/assets/*"]

[tool.ruff]
# Exclude a variety of commonly ignored directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".venv",
    "frontend",
]

# Same as Black
line-length = 88

# Assume Python 3.9
target-version = "py39"

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = [
    "E501",  # Line too long - we'll handle this case by case
    "A002",  # Argument shadowing Python builtin
]

# Allow autofix for all enabled rules (when `--fix`) is provided
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Ignore imports in __init__.py files
"__init__.py" = ["F401", "E402"]
# Ignore assert statements in tests
"test_*.py" = ["S101", "E712"]
"tests/*.py" = ["S101", "E712"]
"tests/**/*.py" = ["S101", "E712"]
# Ignore Typer argument pattern in CLI
"mcphawk/cli.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
omit = [
    "mcphawk/models.py",
    "examples/*",
    "*/examples/*",
]